--- a/Web.config
+++ b/Web.config
@@ -87,4 +87,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<connectionStrings><add name="webClothesEntities" connectionString="metadata=res://*/Models.webClothesModels.csdl|res://*/Models.webClothesModels.ssdl|res://*/Models.webClothesModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MSI\SQLEXPRESS;initial catalog=webClothes;user id=hoangtran;password=Hoangtran2003@@;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+  <connectionStrings>
+    <add name="webClothesEntities" connectionString="metadata=res://*/Models.webClothesModels.csdl|res://*/Models.webClothesModels.ssdl|res://*/Models.webClothesModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MSI\SQLEXPRESS;initial catalog=webClothes;user id=hoangtran;password=Hoangtran2003@@;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+</configuration>
