--- a/web_clothes.csproj
+++ b/web_clothes.csproj
@@ -198,7 +198,7 @@
     <Compile Include="Areas\admin\Controllers\reportsController.cs" />
     <Compile Include="Areas\admin\Controllers\warehousesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\productsController.cs" />
+    <Compile Include="Controllers\productController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -452,17 +452,17 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\Shared\Contact.cshtml" />
     <Content Include="Views\Home\Contact_View.cshtml" />
-    <Content Include="Views\products\Create.cshtml" />
-    <Content Include="Views\products\Delete.cshtml" />
-    <Content Include="Views\products\Details.cshtml" />
-    <Content Include="Views\products\Edit.cshtml" />
-    <Content Include="Views\products\Index.cshtml" />
     <Content Include="Views\cart\showcart.cshtml" />
     <Content Include="Views\cart\cartpartial.cshtml" />
     <Content Include="Views\cart\DatHang.cshtml" />
     <Content Include="Views\cart\HoanThanhDonHang.cshtml" />
     <Content Include="Views\Home\takecategory.cshtml" />
     <Content Include="Views\Home\Details.cshtml" />
+    <Content Include="Views\product\Create.cshtml" />
+    <Content Include="Views\product\Delete.cshtml" />
+    <Content Include="Views\product\Details.cshtml" />
+    <Content Include="Views\product\Edit.cshtml" />
+    <Content Include="Views\product\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
