--- a/web_clothes.csproj
+++ b/web_clothes.csproj
@@ -272,33 +272,33 @@
     <Content Include="Content\Content_Main\bootstrap-theme.min.css" />
     <Content Include="Content\Content_Main\bootstrap.css" />
     <Content Include="Content\Content_Main\bootstrap.min.css" />
-    <Content Include="Content\Images-Title\discount_1.png" />
+    <Content Include="Content\Images\discount_1.png" />
     <Content Include="Content\Images-Title\discount_2.png" />
     <Content Include="Content\Images-Title\discount_3.jpg" />
-    <Content Include="Content\Images-Title\pro_1.jpg" />
-    <Content Include="Content\Images-Title\pro_10.jpg" />
-    <Content Include="Content\Images-Title\pro_11.jpg" />
-    <Content Include="Content\Images-Title\pro_12.jpg" />
-    <Content Include="Content\Images-Title\pro_13.jpg" />
-    <Content Include="Content\Images-Title\pro_14.jpg" />
-    <Content Include="Content\Images-Title\pro_15.jpg" />
-    <Content Include="Content\Images-Title\pro_2.jpg" />
-    <Content Include="Content\Images-Title\pro_3.jpg" />
-    <Content Include="Content\Images-Title\pro_4.jpg" />
-    <Content Include="Content\Images-Title\pro_5.jpg" />
-    <Content Include="Content\Images-Title\pro_6.jpg" />
-    <Content Include="Content\Images-Title\pro_7.jpg" />
-    <Content Include="Content\Images-Title\pro_8.jpg" />
-    <Content Include="Content\Images-Title\pro_9.jpg" />
-    <Content Include="Content\Images-Title\pro_16.jpg" />
-    <Content Include="Content\Images-Title\pro_17.jpg" />
-    <Content Include="Content\Images-Title\pro_18.jpg" />
-    <Content Include="Content\Images-Title\pro_19.jpg" />
-    <Content Include="Content\Images-Title\pro_20.jpg" />
-    <Content Include="Content\Images-Title\pro_21.jpg" />
-    <Content Include="Content\Images-Title\pro_22.jpg" />
-    <Content Include="Content\Images-Title\pro_23.jpg" />
-    <Content Include="Content\Images-Title\pro_24.jpg" />
+    <Content Include="Content\Images-Title\Pro_1.jpg" />
+    <Content Include="Content\Images-Title\Pro_10.jpg" />
+    <Content Include="Content\Images-Title\Pro_11.jpg" />
+    <Content Include="Content\Images-Title\Pro_12.jpg" />
+    <Content Include="Content\Images-Title\Pro_13.jpg" />
+    <Content Include="Content\Images-Title\Pro_14.jpg" />
+    <Content Include="Content\Images-Title\Pro_15.jpg" />
+    <Content Include="Content\Images-Title\Pro_2.jpg" />
+    <Content Include="Content\Images-Title\Pro_3.jpg" />
+    <Content Include="Content\Images-Title\Pro_4.jpg" />
+    <Content Include="Content\Images-Title\Pro_5.jpg" />
+    <Content Include="Content\Images-Title\Pro_6.jpg" />
+    <Content Include="Content\Images-Title\Pro_7.jpg" />
+    <Content Include="Content\Images-Title\Pro_8.jpg" />
+    <Content Include="Content\Images-Title\Pro_9.jpg" />
+    <Content Include="Content\Images-Title\Pro_16.jpg" />
+    <Content Include="Content\Images-Title\Pro_17.jpg" />
+    <Content Include="Content\Images-Title\Pro_18.jpg" />
+    <Content Include="Content\Images-Title\Pro_19.jpg" />
+    <Content Include="Content\Images-Title\Pro_20.jpg" />
+    <Content Include="Content\Images-Title\Pro_21.jpg" />
+    <Content Include="Content\Images-Title\Pro_22.jpg" />
+    <Content Include="Content\Images-Title\Pro_23.jpg" />
+    <Content Include="Content\Images-Title\Pro_24.jpg" />
     <Content Include="Content\Images\background.jpg" />
     <Content Include="Content\Images\Giohang.gif" />
     <Content Include="Content\Images\logo.jpg" />
